# LazyGo_WRO2025

./: .gitignore  LICENSE  README.md  lazy_bash.sh  requirements.txt  vStream.py
instructions/: README.md
lazy_interface/: setup.cfg
lazybot/: package.xml  setup.cfg  setup.py
lazybot/launch/: lazy_launch.py
lazybot/lazybot/: control.py  ser.py
lazybot/lazybot/configure/: vehicle.yaml
lazybot/static/: style.css
models/: CarTop Cover-.stl  Front wheel cover- x2.stl  PS-1171mg Servo Mount.stl  PS1171MG Servo-Arm.stl  README.md  Rear wheel- x2.stl  base plate 2nd layer.stl  bottom chassis-.stl  camera holder-.stl  camera servo holder(PS1171MG).stl  differential holder right.stl  front wheel - x2.stl  gearbox support left - 1.stl  gearbox support left -2.stl  gearbox support right.stl  lego shaft lock left.stl  lego shaft lock right.stl  motor body and differential holder left.stl  motor mount-.stl  read axel support left.stl  steering lever left.stl  steering lever right.stl  steering rack.stl
src/: README.md  rplidar_example.py  vStream.py
src/ESP32 Code/: platformio.ini
src/ESP32 PlatformIO Code/: motors.cpp  platformio.ini
src/lazy_interface/: CMakeLists.txt  package.xml  setup.py
src/lazy_interface/msg/: BotDebugInfo.msg  BotLidarInfo.msg  DetectionTowerInfo.msg  DetectionTowerList.msg  GlobalTowerInfo.msg  LidarTowerInfo.msg  LidarTowerList.msg
src/lazybot/: package.xml  setup.py
src/lazysim/: package.xml  setup.cfg  setup.py
src/testcpp/: CMakeLists.txt  package.xml
t-photos/: README.md
v-photos/: README.md
video/: README.md
(+75 files in other folders)
